Fix responsive layout on small device

--- a/source/stylesheets/_layout.css.scss
+++ b/source/stylesheets/_layout.css.scss
@@ -12,6 +12,7 @@ header {
     color: #fff;
     font-family: 'Dancing script';
     font-size: 35px;
+    margin-left: 10px;
     position: relative;
     text-shadow: 0 1px 0 #333;
 
